Use the correct fonts for the official logo again

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Logos for the Diefenbunker, Canada's Cold War Museum
+
 These logos were drawn in Scalable Vector Graphics (SVG) format [3] for the
 Diefenbunker [0] by Tyler Tidman VA3DGN.  Wherever possible, the Portable
 Network Graphics (PNG) format [4] is now being used for all auto-generated
